hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: hello-world
